--- a/src/Resource/MessageBundle_en.properties
+++ b/src/Resource/MessageBundle_en.properties
@@ -8,3 +8,8 @@ LoadAppointments=Loading Appointments
 UsernamePrompt=Username
 PasswordPrompt=Password
 LoginError=Username/Password is incorrect
+confirmTitleEXIT=Exit?
+confirmTitleCANCEL=Did you want to cancel this action?
+confirmTitleDELETE=Are you sure you want to delete this?
+confirmMessageEXIT=All unsaved data will be lost.
+errorTitle=Oops! Something must have gone wrong. If issue persists please contact support.
